jupyter-book/_build/html/reports/Investigating Rewards v Losses.log
Traceback (most recent call last):
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\nbclient\client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import pandas as pd
import numpy as np
import matplotlib.pyplot as plt
from sklearn.cluster import KMeans
from functions import *
------------------

Traceback [1;36m(most recent call last)[0m:

  File [0;32m"C:\Users\laram\AppData\Local\Continuum\anaconda3\envs\ca4015\lib\site-packages\IPython\core\interactiveshell.py"[0m, line [0;32m3441[0m, in [0;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

[1;36m  File [1;32m"C:\Users\laram\AppData\Local\Temp/ipykernel_21892/3922687706.py"[1;36m, line [1;32m5[1;36m, in [1;35m<module>[1;36m[0m
[1;33m    from functions import *[0m

[1;36m  File [1;32m"C:\Users\laram\CA4015\CA4015-gambling-task\jupyter-book\functions.py"[1;36m, line [1;32m74[0m
[1;33m    def frequency_of_losses(losses)[0m
[1;37m                                   ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (functions.py, line 74)

